--- a/settings.json
+++ b/settings.json
@@ -8,8 +8,8 @@
 "autorecording": false,
 "BotName":"Doge Bot", 
 "NomorOwner":"916909137213", 
-"NomorOwner2":"+91 690-913-7213", 
-"NamaOwner":"Xeon", 
+"NomorOwner2":"94764652847", 
+"NamaOwner":"⏤͟͟͞͞ ̶ꪶ🔥ＲꪊֆＨ🔥༊ ͟͟͞⏤", 
 "Dana":"6909137213", 
 "Pulsa":"6909137213", 
 "Ovo":"6909137213", 
