--- a/settings.json
+++ b/settings.json
@@ -7,9 +7,9 @@
 "autocomposing": false,
 "autorecording": false,
 "BotName":"Doge Bot", 
-"NomorOwner":"916909137213", 
+"NomorOwner":"94764652847", 
 "NomorOwner2":"+91 690-913-7213", 
-"NamaOwner":"Xeon", 
+"NamaOwner":"⏤͟͟͞͞ ̶ꪶ🔥ＲꪊֆＨ🔥༊ ͟͟͞⏤", 
 "Dana":"6909137213", 
 "Pulsa":"6909137213", 
 "Ovo":"6909137213", 
